[package]
name = "mdbook-paged"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.5"
mdbook = "0.4.35"
pulldown-cmark = "0.9.3"
serde = "1.0.188"
serde_derive = "1.0.188"
tempfile = "3.8.0"
